Example text based adventure

--- a/src/pages/BeaconHome.page
+++ b/src/pages/BeaconHome.page
@@ -245,7 +245,7 @@
 				<apex:image url="{!$Resource.cassette}" width="500" />
 			</apex:outputPanel>
 
-			<apex:outputPanel rendered="{!pageStatus == 'INadventure'}">
+			<apex:outputPanel rendered="{!pageStatus == 'INADVENTURE'}">
 				<!-- Put the game play stuff in here -->
 
 				<script>
