--- a/src/pages/sim_page_datagen_generic.page
+++ b/src/pages/sim_page_datagen_generic.page
@@ -1,4 +1,4 @@
-<apex:page controller="SimDataGenController" showHeader="true" sidebar="true" >
+<apex:page controller="SimDataGenController" showHeader="true" sidebar="true" action="{!assignPermissionSet}">
 	<apex:pageMessages id="msg"/>
     <apex:form >
     	<apex:actionFunction action="{!populateGenericData}" name="doPageAction"/>
