--- a/src/pages/sim_page_datagen_result.page
+++ b/src/pages/sim_page_datagen_result.page
@@ -1,3 +1,3 @@
-<apex:page controller="SimDataGenController" showHeader="true" sidebar="true" >
+<apex:page controller="SimDataGenController" showHeader="true" sidebar="true" action="{!createGameVars}">
 	<apex:sectionHeader title="Done!" subtitle="Ready for the adventure!" />
 </apex:page>
